feat(api): criar a rota para ignorar jogos
